2005-04-21  Florian Boor  <florian.boor@kernelconcepts.de>

    * Released Version 0.21
    * gpe-nmf.c: Some minor fixes.

2005-04-20  Florian Boor  <florian.boor@kernelconcepts.de>

    * gpe-nmf.c: Major UI fixes using a table layout.
    * gpe-nmf.c, gstplayer.c: Add note, formating fixes.

2005-04-19  Florian Boor  <florian.boor@kernelconcepts.de>

    * gstplayer.c, gpe-nmf.c, frontend.h: Fixed position slider functionality.
    * gpe-nmf.c: Implemented unpause using pause button.
    * playlist-edit.c, gpe-nmf.c, gstplayer.c: Improved failure behaviour.
	* gstplayer.c: Avoid assertions, fix error callback to avoid segfault, 
                   fix formating.
    * gstplayer.c, gpe-nmf.c: Some changes that might help to fix the slider.
    * gstplayer.c: Remove some useless lines.

2005-04-17  Florian Boor  <florian.boor@kernelconcepts.de>

    * gpe-nmf.c, playlist-edit.c: GUI improvements:
      - Don't load useless icons.
      - Use correct stock icons.
      - Don't use fixed playlist toolbar layout.
      - Implement selecting of multiple items.
      - fixed warning about const type
      - add ok button
      - fixed tooltips text
    * frontend.h, playlist-edit.c: Remember last path.
    * gpe-nmf.c: Re-Enable slider - we really want to fix it.

2005-04-16  Florian Boor  <florian.boor@kernelconcepts.de>

	* Makefile, backend/Makefile: Fixed path in install target.

2005-03-31  Florian Boor  <florian.boor@kernelconcepts.de>

	* Don't use render.h

2004-09-21  Florian Boor  <florian.boor@kernelconcepts.de>

	* Released Version 0.19
	* Applied patches by Chris Lord <cwiiis@blueyonder.co.uk> fixing:
          - Pause button
          -Progress from one track to the next
          -No dependence on gnome-vfs by default (though it can be used optionally still)
          -Progress bar
          -Time display


2004-07-06  Florian Boor  <florian.boor@kernelconcepts.de>

	* Makefile, backend/Makefile: More makefile fixes and updates.